chore: add some refs, inherit verbose env from secrets

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
           npm link
           zx-semrel
         env:
+          VERBOSE: ${{ secrets.VERBOSE }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GIT_COMMITTER_NAME: Anton Golub
+          GIT_COMMITTER_NAME: antongolub
           GIT_COMMITTER_EMAIL: mailbox@antongolub.ru
