--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "@semrel-extra/zx-semrel"
   ],
   "version": "1.21.2",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "zx-based release script as semantic-release alternative (PoC)",
   "main": "./release.mjs",
   "type": "module",
