--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 
 permissions: {}
-  
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -34,9 +34,9 @@ jobs:
         run: node ./cli.mjs
         env:
           VERBOSE: ${{ secrets.VERBOSE }}
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NPM_PROVENANCE: true
           GIT_COMMITTER_NAME: ${{ secrets.GIT_COMMITTER_NAME }}
           GIT_COMMITTER_EMAIL: ${{ secrets.GIT_COMMITTER_EMAIL }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_PROVENANCE: true
           PUSH_MAJOR_TAG: true
